--- a/uzukler.html
+++ b/uzukler.html
@@ -314,7 +314,7 @@ footer {
     </div>
     <div class="menu-links" id="menuLinks">
       <a href="index.html">Ana səhifə</a>
-      <a href="uzukler.html">Üzüklər</a>
+      <a href="uzukler">Üzüklər</a>
       <a href="qolbaq.html">Qolbaqlar</a>
       <a href="boyunbag.html">Boyunbağlar</a>
     </div>
