--- a/uzukler.html
+++ b/uzukler.html
@@ -300,7 +300,7 @@ footer {
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
-      <p>Üzüklər Kataloqu</p>
+      <p style="font-size: 20px; font-weight: bold;">Üzüklər Kataloqu</p>
       <p>Yeniləndi: <span id="lastUpdated"></span></p>
     </div>
   </header>
