--- a/uzukler.html
+++ b/uzukler.html
@@ -398,25 +398,25 @@
   <div class="footer-content">
     <div class="footer-column">
       <h4>Bizimlə əlaqə</h4>
-      <p>+994 70 292 03 23</p>
-      <p><a href="mailto:support@islimi.az">support@islimi.az</a></p>
+      <p><a href="tel:+994702920323">+994 70 292 03 23</p>
+      <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0">Whatsapp Əlaqə</a></p>
     </div>
 
     <div class="footer-column">
       <h4>Kateqoriyalar</h4>
       <ul>
+        <li><a href="uzukler">Yeni</a></li>
         <li><a href="uzukler">Üzüklər</a></li>
+        <li><a href="qolbaq.html">Sırgalar</a></li>
         <li><a href="qolbaq.html">Qolbaqlar</a></li>
-        <li><a href="boyunbag.html">Boyunbağlar</a></li>
+        <li><a href="boyunbag.html">Boyunbağılar</a></li>
       </ul>
     </div>
 
     <div class="footer-column">
       <h4>Sosial Şəbəkələr</h4>
       <div class="social-icons">
-        <a href="#"><img src="icons/instagram.svg" alt="Instagram"></a>
-        <a href="#"><img src="icons/facebook.svg" alt="Facebook"></a>
-        <a href="#"><img src="icons/tiktok.svg" alt="TikTok"></a>
+        <a href="https://www.instagram.com/islimi_jewellery/"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram"></a>
       </div>
     </div>
   </div>
