--- a/uzukler.html
+++ b/uzukler.html
@@ -399,24 +399,24 @@
     <div class="footer-column">
       <h4>Bizimlə əlaqə</h4>
       <p><a href="tel:+994702920323">+994 70 292 03 23</p>
-      <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0">Whatsapp Əlaqə</a></p>
+      <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0" target="_blank">Whatsapp Əlaqə</a></p>
     </div>
 
     <div class="footer-column">
       <h4>Kateqoriyalar</h4>
       <ul>
-        <li><a href="uzukler">Yeni</a></li>
+        <li><a href="/">Yeni</a></li>
         <li><a href="uzukler">Üzüklər</a></li>
-        <li><a href="qolbaq.html">Sırgalar</a></li>
-        <li><a href="qolbaq.html">Qolbaqlar</a></li>
-        <li><a href="boyunbag.html">Boyunbağılar</a></li>
+        <li><a href="sirqalar">Sırgalar</a></li>
+        <li><a href="qolbaqlar">Qolbaqlar</a></li>
+        <li><a href="boyunbagilar">Boyunbağılar</a></li>
       </ul>
     </div>
 
     <div class="footer-column">
       <h4>Sosial Şəbəkələr</h4>
       <div class="social-icons">
-        <a href="https://www.instagram.com/islimi_jewellery/"><img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Instagram.svg" alt="Instagram"></a>
+        <a href="https://www.instagram.com/islimi_jewellery/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Instagram.svg" alt="Instagram"></a>
       </div>
     </div>
   </div>
